<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:id="@+id/month_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtPrevMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:alpha="0.5"
            android:text="Feb."
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/txtCurrentMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="March"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/txtNextMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:alpha="0.5"
            android:text="Apr."
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF"
            android:singleLine="true"/>

        <ImageView
            android:id="@+id/btn_prev_month"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@+id/txtCurrentMonth"
            android:layout_toStartOf="@+id/txtCurrentMonth"
            android:alpha="0.5"
            android:src="@drawable/btn_media_back"/>

        <ImageView
            android:id="@+id/btn_next_month"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toEndOf="@+id/txtCurrentMonth"
            android:layout_toRightOf="@+id/txtCurrentMonth"
            android:alpha="0.5"
            android:rotation="180"
            android:scaleType="fitXY"
            android:src="@drawable/btn_media_back"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/week_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/month_bar"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/week_sun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/title_sunday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/week_mon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/title_monday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/week_tue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/title_tuesday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/week_wed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/title_wednesday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/week_thu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/title_thursday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/week_fri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/title_friday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/week_sat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/title_saturday"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF"
                android:singleLine="true"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/div_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/week_bar"
        android:background="#FFFFFF"/>

    <RelativeLayout
        android:id="@+id/calendar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/div_line">

        <GridView
            android:id="@+id/calendar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="7"/>

        <TextView
            android:id="@+id/calendar_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/calendar_container"
            android:text="7:30 PM"
            android:textColor="#FFFFFF"
            android:textSize="35dp"
            android:textStyle="bold"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/match_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:text="@string/match_content"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/match_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/match_content"
            android:text="@string/match_type"
            android:textColor="#FFFFFF"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </RelativeLayout>
</RelativeLayout>