<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <RelativeLayout
            android:id="@+id/btn_prev_week"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/btn_previous_week"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#666666"
                android:singleLine="true"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_back_black"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/selected_week"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/title_selected_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/week_order"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:singleLine="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/week_title"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#666666"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_next_week"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/btn_back_black"
                android:rotation="180"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/btn_next_week"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#666666"
                android:singleLine="true"/>
        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/match_week_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>