<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/league_ranking_header_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_weight="6"
                android:text="#"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#666666"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/league_ranking_header_title_club"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:text="@string/title_ranking_club"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#666666"
            android:gravity="left"
            android:singleLine="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6">

            <TextView
                android:id="@+id/league_ranking_header_title_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/title_ranking_week"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#666666"
                android:gravity="left"
                android:singleLine="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6">

            <TextView
                android:id="@+id/league_ranking_header_title_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/title_ranking_goals"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#666666"
                android:gravity="left"
                android:singleLine="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="6">

            <TextView
                android:id="@+id/league_ranking_header_title_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:text="@string/title_ranking_points"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#666666"
                android:gravity="left"
                android:singleLine="true"/>
        </RelativeLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/match_ranking_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>